kubernetes/deployment.server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uncanon-server
  name: uncanon-server
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: uncanon-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        commit_short_sha: <COMMIT_SHORT_SHA>
      creationTimestamp: null
      labels:
        app: uncanon-server
    spec:
      containers:
      - image: registry.gitlab.com/grp75/uncanon/server
        imagePullPolicy: Always
        name: uncanon-server
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
