kubernetes/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - api.uncanon.pictures
      secretName: uncanon-wildcard
  rules:
    - host: api.uncanon.pictures
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uncanon-server
                port:
                  number: 3000
